layout updates & fixes * (horizontally) center wrapped topbar content * fix active navigation item * set default closed nav width (fix for Dojo topbar layout) * less padding for navigation * introduce option to set topbar bottom border and sidebar border (for light bg)

--- a/themesource/atlas_core/web/core/helpers/_navigation-bar.scss
+++ b/themesource/atlas_core/web/core/helpers/_navigation-bar.scss
@@ -21,6 +21,7 @@
                 display: flex;
                 flex-flow: wrap;
                 align-items: center;
+                justify-content: center;
                 
                 > .mx-navbar-item {
                     margin-left: var(--spacing-small);
