--- a/themesource/atlas_core/web/themes/_theme-default.scss
+++ b/themesource/atlas_core/web/themes/_theme-default.scss
@@ -107,7 +107,7 @@
 
   /* Navigation */
   --navigation-item-height: unset;
-  --navigation-item-padding: var(--spacing-medium);
+  --navigation-item-padding: 12px;
   --navigation-border-radius: var(--border-radius-m);
   --navigation-scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
 
@@ -147,6 +147,7 @@
   --navsidebar-border-color: var(--border-color-default);
   --navsidebar-border-radius: var(--navigation-border-radius);
   --navsidebar-shadow: 0 0 4px rgb(0 0 0 / 14%), 2px 4px 8px rgb(0 0 0 / 28%);
+  --navsidebar-border-right: none;
 
   --navsidebar-font-size: var(--font-size-default);
   --navsidebar-sub-font-size: var(--font-size-small);
@@ -160,11 +161,11 @@
   --navsidebar-sub-color-hover: var(--navigation-color-hover);
   --navsidebar-sub-color-active: var(--navigation-color-active);
 
-  --navsidebar-width-closed: 48px;
+  --navsidebar-width-closed: 52px;
   --navsidebar-width-open: 232px;
   --navsidebar-toggle-size: 32px;
 
-  --navsidebar-icon-height: 52px;
+  --navsidebar-icon-height: 44px;
   --navsidebar-icon-width: 52px;
   --navsidebar-animation-duration: 250ms;
   --navsidebar-animation-function: ease-in;
@@ -190,6 +191,7 @@
 
   --navtopbar-border-color: var(--topbar-border-color);
   --navtopbar-border-radius: var(--navigation-border-radius);
+  --navtopbar-border-bottom: none;
 
     /* Shadows */
   --shadow-color-border: var(--border-color-default);
